# LuxLauncher

./: .gitignore  README.md
launcher/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  downloader.cpp  downloader.h  filesystem.cpp  filesystem.h
launcher/account/: AccountManager.cpp  AccountManager.h  MSALogin.cpp  MSALogin.h
launcher/net/: Downloader.cpp  NetworkRequest.cpp  NetworkRequest.h  networkrequest.cpp  networkrequest.h
